@@ -1,3 +1,6 @@
+[B]Version 1.1.5 - 21 Mar 2017[/B]
+- OZee new scraper
+
 [B]Version 1.1.4 - 19 Mar 2017[/B]
 - Mersalaayitten Domain change
 - Enable Mersalaayitten HD by default
